Small spacing fix in search bar in menu

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -438,7 +438,6 @@ body {
   #search-menu-icon {
     background-size: 20px 20px;
     height: 20px;
-    padding: 0 0 0 30px;
 
     &:focus {
       height: 44px;
